fix read more alignment css bug

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -11,7 +11,14 @@
         Ivory: #FFFFF0
 */
 
+/* align 'read more' in front page */
+.mdl-card__supporting-text {
+		min-height: 145px;
+}
 
+.mdl-card__supporting-text p {
+	margin-top: 5%;
+}
 .mdl-layout__header {
 
 background: rgba(0,96,20,1);
